# python-100knock-ai-model

./: .gitignore  pyproject.toml
chapter001/src/: chapter001.ipynb
chapter002/src/: chapter002.ipynb
chapter003/src/: chapter003.ipynb
chapter004/src/: chapter004.ipynb
chapter005/src/: chapter005.ipynb
chapter006/src/: chapter006.ipynb
chapter007/src/: chapter007.ipynb
chapter008/src/: chapter008.ipynb
chapter009/src/: chapter009.ipynb
