[tool.poetry]
name = "python-100knock-ai-model"
version = "0.1.0"
description = ""
authors = ["Masaru Fukazawa <upw.ponsuke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
pyclustering = "^0.10.1.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
umap-learn = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
